--- a/src/styles/Boton.module.css
+++ b/src/styles/Boton.module.css
@@ -1,10 +1,16 @@
 .miBoton {
-    background-color: rgb(0, 255, 34);
+    /* background-color: rgb(0, 255, 34);
     color: white;
     padding: 10px;
     border-radius: 5px;
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
     -ms-border-radius: 5px;
-    -o-border-radius: 5px;
+    -o-border-radius: 5px; */
+    padding: 8px 12px !important;
+    gap: 10px !important;
+    border: 2px solid #598428 !important;
+    border-radius: 12px !important;
+    color: #598428 !important;
+    font-size: 1rem !important;
 }
